<resources>
    <string name="app_name">Vedic Tree Kids Learning</string>
    <string name="facebook_app_id">440706497334623</string>
    <string name="fb_login_protocol_scheme">fb440706497334623</string>
    <string name="loginMobile">Mobile</string>
    <string name="loginPassword">Password</string>
    <string name="loginButton">Login</string>
    <string name="loginToRegister">Register</string>
    <string name="forgotPassword">Forgot Password ?</string>
    <string name="logoString">NAYE ZAMANE KI NAYI SCHOOL </string>
    <string name="logoString2">NAYE ZAMANE KI... </string>
    <string name="logoString3">NAYI SCHOOL</string>
    <string name="signUpString">Sign Up</string>
    <string name="underlined_text"><u> Sign Up</u></string>
    <string name="registerEmail">Email</string>
    <string name="registerPassword">Password</string>
    <string name="registerConfirmPassword">Confirm Password</string>
    <string name="registerMobile">Mobile</string>
    <string name="registerName">Name</string>
    <string name="registerButton">Register</string>
    <string name="registerToLogin">Login</string>
    <string name="signUplogo">WELCOME BACK </string>
    <string name="signUplogo2">Sign up to continue to Vedic Tree</string>
    <string name="label1">Student Name:</string>
    <string name="label2">Enter email Id:</string>
    <string name="label3">Student Mobile:</string>
    <string name="label4">Student Class:</string>
    <string name="label5">Enter Promo code:</string>
    <string name="label6">Student Password:</string>
    <string name="label7">Confirm Password:</string>
    <string name="loginAsLabel">Student Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="TC12">For EMI process visit our website at: https://www.vedictreeschool.com"</string>
    <string name="verifyNumber">Confirm your Number</string>
    <string name="otpVerify">Verify OTP</string>
    <string name="sendOtp">Submit</string>
    <string name="verifyNumberLabel">Enter Verified Mobile Number</string>
    <string name="verifyNumberLabelNew">Enter Mobile Number</string>
    <string name="resendOtp">Resend OTP?</string>
    <string name="submitButton">Submit</string>
    <string name="mobileNumber">Enter your 10 digit  mobile number</string>
    <string name="mobile_error">The required Field can not be blank</string>
    <string name="error_invalid_mobile">Mobile number  is not valid</string>
    <string name="enterOtp">Enter OTP</string>
    <string name="enterNewPassword">Enter new password</string>
    <string name="enterOldPassword">Enter old password</string>
    <string name="labelBottomHome">Home</string>
    <string name="labelBottomProfile">Profile</string>
    <string name="studentNameLabel">Student Name:</string>
    <string name="contactNumberLabel">Contact Number:</string>
    <string name="emailLabel">Email ID:-</string>
    <string name="courseLabel">Course Name:</string>
    <string name="editProfileStudent">Student</string>
    <string name="editProfileFather">Father</string>
    <string name="editProfileMother">Mother</string>
    <string name="studentName">Name:</string>
    <string name="studentFatherName">Father Name:-</string>
    <string name="studentSurnameName">Surname:</string>
    <string name="studentReligionName">Religion:-</string>
    <string name="studentCasteName">Caste:-</string>
    <string name="studentSubCasteName">Sub caste:-</string>
    <string name="studentPreviousSchookName">Previous School name:-</string>
    <string name="studentMotherToungeName">Mother Tongue:-</string>
    <string name="studentGenderName">Gender:-</string>
    <string name="studentBirthDate">Date of Birth:-</string>
    <string name="studentResidentialAdd">Residential Add:</string>
    <string name="student_save">Save</string>
    <string name="firstName">First Name:-</string>
    <string name="lastName">Last Name:-</string>
    <string name="fatherQualification">Father Qualification:</string>
    <string name="fatherMobile">Father Mobile Number</string>
    <string name="fatherAdhar">Father Adhar number:</string>
    <string name="fatherEmail">Father Email ID:</string>
    <string name="fatherOffice">Office name and address:</string>
    <string name="fatherEmergency">Emergency number:</string>
    <string name="fatherContact">Contact number:</string>
    <string name="motherName">Mother Name:-</string>
    <string name="motherOccupation">Mother Occupation:</string>
    <string name="motherMobile">Mother Mobile Number</string>
    <string name="motherAdhar">Adhar number:-</string>
    <string name="motherEmail">Mother Email ID:</string>
    <string name="motherQualification">Mother Qualification:</string>
    <string name="anySpecificInfo">Any specific information:</string>
    <string name="landline">Landline number:-</string>
    <string name="submitParentPin">Submit</string>
    <string name="parentPinLabel">Enter Parent Pin</string>
    <string name="setParentPin">Set Parent Pin</string>
    <string name="valueEducation">Value Education</string>
    <string name="hello_world">Hello world!</string>
    <string name="description">Media Controls</string>
    <string name="myCourseLabel">My Course</string>
    <string name="myCouserChooseCourse">Choose course:</string>
    <string name="showCourseDetail">COURSE DETAILS</string>
    <string name="showDetailHD">WATCH VIDEO</string>
    <string name="showFlexi">FLEXIBLE LEARNING</string>
    <string name="showProgress">PROGRESS TRACKING</string>
    <string name="showActivity">INTERACTIVE ACTIVITIES</string>
    <string name="showParent">PARENT CONTROL</string>
    <string name="showSelf">SELF PACED LEARNING</string>
    <string name="showCourse">10 MONTH COURSE</string>
    <string name="activity_main_static">Static Helpers</string>
    <string name="activity_main_dynamic">Dynamic Helpers</string>
    <string name="activity_main_instructions">Select the type of deep link you wish to perform. If
        you know a URI Path for the type of deep link you wish to perform, you may enter it. By
        leaving it blank, a default URI Path will be used. Hit the GO button once ready!
    </string>
    <string name="activity_main_go">GO!</string>
    <string name="activity_main_launch">Launch Vimeo</string>
    <string name="activity_main_playstore">View in Play Store</string>
    <string name="activity_main_select_error">Please choose a deep link type!</string>
    <string name="activity_main_uri_hint">URI Path</string>
    <string name="activity_main_type_category">Category</string>
    <string name="activity_main_type_channel">Channel</string>
    <string name="activity_main_type_user">User</string>
    <string name="activity_main_type_vod">VOD</string>
    <string name="activity_main_type_albums">Albums</string>
    <string name="activity_main_type_url">Custom URL</string>
    <string name="activity_main_type_video">Video</string>
    <string name="activity_main_categories">Show Categories</string>
    <string name="activity_main_explore">Show Explore</string>
    <string name="activity_main_watch">Show Watch</string>
    <string name="activity_main_account">Show Account</string>
    <string name="activity_main_feed">Show Feed</string>
    <string name="activity_main_me">Show My Profile</string>
    <string name="activity_main_notifications">Show Notifications</string>
    <string name="activity_main_notification_settings">Show Push Notification Settings</string>
    <string name="activity_main_playlists">Show Playlists</string>
    <string name="activity_main_upgrade">Show Upgrade</string>
    <string name="activity_main_upload">Show Upload</string>
    <string name="activity_main_offline">Show Offline</string>
    <string name="activity_main_watchlater">Show Watch Later</string>
    <string name="activity_main_purchases">Show Purchases</string>
    <string name="activity_main_video_manager">Show Video Manager</string>
    <string name="activity_main_default_user">ilindy</string>
    <string name="activity_main_albums_for_user">Show Albums For User Id</string>
    <string name="activity_main_albums_manager">Show Albums For Logged In User</string>
    <string name="activity_main_deeplink_failure">Could not perform the following deep link!</string>
    <string name="activity_main_album_for_id">Show Album For Id</string>
    <string name="activity_main_default_album_id">3576138</string>
    <string name="enroll_now">Enroll Now</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="show_receipt">Show Receipt</string>
    <string name="use_of_the_website">Use of the Website –</string>
    <string name="useOfWebsite">These terms and conditions establish an official agreement according to the arrangements and rules under the Information Technology Act of 2000, by and between the administrator of the site, being VedicTree Educare Pvt Ltd , an organization appropriately fused under the arrangements of the Companies Act, 1956 (hereinafter alluded to as"Organization") and having its enrolled office at Plot No 23, Amrut Heights, Sector 4, Karanjade, Panvel, Navi Mumbai, Maharashtra 410206 and You. The Company is the approved licensee and affiliate VedicTree Educare Pvt Ltd  through www.VedicTreeSchool.com  (hereinafter alluded to as "Site"). This Agreement for the Terms and Conditions of the utilization of the Companys Website/s (hereinafter alluded to as "Arrangement) depicts certain terms and conditions to access and utilize the Website/s of the Company by a guest or an enlisted client and request items (hereinafter alluded to as the "End User", "You" or "Your")</string>
    <string name="trademarks">Trademarks-</string>
    <string name="tradmarkDetail">The brand names, names, logos, and administration marks (by and large "brand names") showed on this site are brand names of the individual proprietors. Nothing contained on this site thought to be interpreted as conceding any permit or right to you to utilize any brand name without the earlier composed consent of the proprietor.</string>
    <string name="external_links">External links –</string>
    <string name="external_linksDetail">Outside connections might be accommodated your comfort, however they are outside the ability to control of the Company and Website and no portrayal is made with respect to their substance. Use or dependence on any outside joins and the substance subsequently gave is at your own danger.</string>
    <string name="warranties">Warranties –</string>
    <string name="warrantiesDetail">The Company and Website make no guarantees, portrayals, proclamations or ensures (regardless of whether express, suggested in law, or lingering) in regards to the site.</string>
    <string name="disclaimer_of_liability">Disclaimer of liability-</string>
    <string name="particulars">PARTICULARS</string>
    <string name="pay_now">PAY NOW</string>
    <string name="vedic_tree">VEDIC TREE</string>
    <string name="twinking_star">Twinkling star</string>
    <string name="nursery">Nursery</string>
    <string name="amount">AMOUNT</string>
    <string name="total_fees">TOTAL FEES</string>
    <string name="total_amount">TOTAL AMOUNT</string>
    <string name="todo">TODO</string>
    <string name="school_fees">SCHOOL FEES</string>
    <string name="kit_charges">KIT CHARGES</string>
</resources>