<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login_bg"
    tools:context="com.vedictree.preschool.VerifyOtpNew">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/margin_30"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/width_150"
                android:layout_height="@dimen/width_150"
                android:layout_gravity="center"
                android:src="@drawable/ic_logo_tree" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/reglisse_fill"
                android:gravity="center"
                android:text="@string/otpVerify"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_30sp" />

            <EditText
                android:id="@+id/otpTextNew"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_50"
                android:background="@drawable/rect_edittext_bg"
                android:fontFamily="@font/reglisse_fill"
                android:gravity="center"
                android:hint="@string/enterOtp"
                android:inputType="number"
                android:maxLength="12"
                android:layout_marginTop="5dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/text_27" />

            <TextView
                android:id="@+id/verifyOtpResendOtpNew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="@dimen/padding_5"
                android:fontFamily="@font/reglisse_fill"
                android:gravity="right"
                android:text="@string/resendOtp"
                android:textColor="@color/white"
                android:textSize="@dimen/text_20sp"
                android:visibility="visible" />


            <LinearLayout
                android:id="@+id/submit_verify_otp_new_ll"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_40"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/padding_5"
                android:gravity="center"
                android:visibility="visible">

                <Button
                    android:id="@+id/submit_verify_otp_new"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="@dimen/width_150"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@drawable/login_button_bg"
                    android:fontFamily="@font/reglisse_fill"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:text="@string/submitButton"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_27" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>