<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@drawable/videos_bg"
    tools:context="com.vedictree.preschool.CourseTwinking">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="UselessParent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">
                <Button
                    android:id="@+id/twink_course"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="@dimen/horizontal_margin_40dp"
                    android:layout_marginVertical="@dimen/horizontal_margin_10dp"
                    android:background="@drawable/cloud"
                    android:text="@string/nursery"
                    android:textColor="@color/app_red"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    android:fontFamily="@font/s_i"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:text="@string/vedic_tree"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:fontFamily="@font/s_i"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:text="@string/twinking_star"
                    android:fontFamily="@font/s_i"
                    android:textColor="#FF4739"
                    android:textStyle="bold"
                    android:layout_gravity="center"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/light_green_background"
                android:layout_margin="25dp"
                android:orientation="vertical">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:ignore="UselessParent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="500dp"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/courses_twink_top"
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            android:scaleType="fitXY"
                            android:layout_gravity="center"
                            android:layout_marginHorizontal="20dp"
                            android:background="@android:color/transparent"
                            android:contentDescription="@string/todo" />
                        <TextView
                            android:id="@+id/pdf_twink"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/ic_purple_bg"
                            android:text="@string/showCourseDetail"
                            android:layout_marginHorizontal="20dp"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:textSize="@dimen/text_16"/>
                        <TextView
                            android:id="@+id/show_twink"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/ic_red_background_full"
                            android:text="@string/showDetailHD"
                            android:layout_marginHorizontal="20dp"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:layout_marginTop="@dimen/horizontal_margin_10dp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:textSize="@dimen/text_16"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/ic_green_new"
                            android:layout_marginHorizontal="25dp"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_gravity="center"
                                    android:layout_marginStart="5dp"
                                    android:layout_weight="1"
                                    android:gravity="center|left"
                                    android:text="@string/particulars"
                                    android:textColor="@color/black"
                                    android:textStyle="bold"
                                    tools:ignore="RtlHardcoded" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_gravity="center"
                                    android:layout_marginStart="5dp"
                                    android:layout_weight="1"
                                    android:gravity="center"
                                    android:text="@string/amount"
                                    android:textColor="@color/black"
                                    android:textStyle="bold" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:background="#52CD9D"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_gravity="center"
                                    android:layout_marginStart="5dp"
                                    android:layout_weight="1"
                                    android:gravity="center|left"
                                    android:text="@string/school_fees"
                                    android:textColor="@color/black"
                                    android:textStyle="bold"
                                    tools:ignore="RtlHardcoded" />

                                <TextView
                                    android:id="@+id/twink_annual_fee"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_gravity="center"
                                    android:layout_marginStart="5dp"
                                    android:layout_weight="1"
                                    android:gravity="center"
                                    android:textColor="@color/black"
                                    android:textStyle="bold" />

                            </LinearLayout>
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:orientation="horizontal">
                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_gravity="center"
                                    android:layout_marginStart="5dp"
                                    android:layout_weight="1"
                                    android:gravity="center|left"
                                    android:text="@string/kit_charges"
                                    android:textColor="@color/black"
                                    android:textStyle="bold"
                                    tools:ignore="RtlHardcoded" />
                                <TextView
                                    android:id="@+id/twink_book"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_gravity="center"
                                    android:layout_marginStart="5dp"
                                    android:layout_weight="1"
                                    android:gravity="center"
                                    android:textColor="@color/black"
                                    android:textStyle="bold" />
                            </LinearLayout>
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:background="#52CD9D"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_gravity="center"
                                    android:layout_marginStart="5dp"
                                    android:layout_weight="1"
                                    android:gravity="center|left"
                                    android:text="@string/total_fees"
                                    android:textColor="@color/black"
                                    android:textStyle="bold"
                                    tools:ignore="RtlHardcoded" />

                                <TextView
                                    android:id="@+id/twink_total_fee"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_gravity="center"
                                    android:layout_marginStart="5dp"
                                    android:layout_weight="1"
                                    android:gravity="center"
                                    android:textColor="@color/black"
                                    android:textStyle="bold" />

                            </LinearLayout>
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:orientation="horizontal">
                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_gravity="center"
                                    android:layout_marginStart="5dp"
                                    android:layout_weight="1"
                                    android:gravity="center|left"
                                    android:text="DISCOUNT @50%"
                                    android:textColor="@color/black"
                                    android:textStyle="bold"
                                    tools:ignore="RtlHardcoded" />
                                <TextView
                                    android:id="@+id/twink_gst"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_gravity="center"
                                    android:layout_marginStart="5dp"
                                    android:layout_weight="1"
                                    android:gravity="center"
                                    android:textColor="@color/black"
                                    android:textStyle="bold" />
                            </LinearLayout>
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:background="#52CD9D"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_gravity="center"
                                    android:layout_marginStart="5dp"
                                    android:layout_weight="1"
                                    android:gravity="center|left"
                                    android:text="@string/total_amount"
                                    android:textColor="@color/black"
                                    android:textStyle="bold"
                                    tools:ignore="RtlHardcoded" />

                                <TextView
                                    android:id="@+id/twink_total_amount"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_gravity="center"
                                    android:layout_marginStart="5dp"
                                    android:layout_weight="1"
                                    android:gravity="center"
                                    android:textColor="@color/black"
                                    android:textStyle="bold" />
                            </LinearLayout>
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="25dp"
                                android:orientation="horizontal">
                            </LinearLayout>

                        </LinearLayout>
                        <Button
                            android:id="@+id/twink_pay_now"
                            android:layout_width="200dp"
                            android:layout_height="50dp"
                            android:layout_marginHorizontal="@dimen/horizontal_margin_40dp"
                            style="@style/Widget.AppCompat.Button.Borderless"
                            android:layout_gravity="center"
                            android:layout_marginTop="-25dp"
                            android:textStyle="bold"
                            android:textColor="@color/white"
                            android:background="@drawable/ic_pay_button_bg"
                            android:text="@string/pay_now"/>
                    </LinearLayout>
                </ScrollView>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/course_twink_back"
            android:layout_width="@dimen/height_50"
            android:layout_height="@dimen/height_50"
            android:layout_gravity="start"
            android:orientation="vertical"
            android:background="@drawable/login_back_button"
            android:layout_margin="2dp">

        </LinearLayout>

    </FrameLayout>
</LinearLayout>